[gd_scene load_steps=14 format=3 uid="uid://r1b440sc0tkl"]

[ext_resource type="Script" path="res://entities/shooter.gd" id="1_iyj4l"]
[ext_resource type="Texture2D" uid="uid://dm7pxbc4sw21l" path="res://entities/turrets/single/assets/textures/gun_idle_00.png" id="2_31pp5"]
[ext_resource type="Texture2D" uid="uid://djmhh26sa4xo" path="res://entities/turrets/single/assets/textures/gun_shoot_00.png" id="4_80ryh"]
[ext_resource type="Texture2D" uid="uid://pus7ugvpejf2" path="res://entities/turrets/single/assets/textures/gun_shoot_01.png" id="5_bcu82"]
[ext_resource type="Texture2D" uid="uid://d0jreoinmscsr" path="res://entities/turrets/single/assets/textures/gun_shoot_02.png" id="6_emgg5"]
[ext_resource type="Texture2D" uid="uid://dphnv0moemc3v" path="res://entities/turrets/single/assets/textures/gun_shoot_03.png" id="7_7d4qh"]
[ext_resource type="Texture2D" uid="uid://eca34m83s7ca" path="res://entities/turrets/single/assets/textures/gun_shoot_04.png" id="8_623st"]
[ext_resource type="Texture2D" uid="uid://cy3082jux24io" path="res://entities/turrets/single/assets/textures/gun_shoot_05.png" id="9_wt1r4"]
[ext_resource type="Texture2D" uid="uid://orirghhsn0xs" path="res://entities/turrets/single/assets/textures/gun_shoot_06.png" id="10_r4ivj"]
[ext_resource type="Texture2D" uid="uid://pidagis5t7y5" path="res://entities/turrets/single/assets/textures/gun_shoot_07.png" id="11_ecrc2"]

[sub_resource type="SpriteFrames" id="SpriteFrames_m3rfr"]
resource_local_to_scene = true
animations = [{
"frames": [],
"loop": false,
"name": &"explode",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_31pp5")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_80ryh")
}, {
"duration": 1.0,
"texture": ExtResource("5_bcu82")
}, {
"duration": 1.0,
"texture": ExtResource("6_emgg5")
}, {
"duration": 1.0,
"texture": ExtResource("7_7d4qh")
}, {
"duration": 1.0,
"texture": ExtResource("8_623st")
}, {
"duration": 1.0,
"texture": ExtResource("9_wt1r4")
}, {
"duration": 1.0,
"texture": ExtResource("10_r4ivj")
}, {
"duration": 1.0,
"texture": ExtResource("11_ecrc2")
}],
"loop": false,
"name": &"shoot",
"speed": 10.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_0m3mx"]
resource_local_to_scene = true
animations = [{
"frames": [],
"loop": false,
"name": &"explode",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"shoot",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_juiex"]
radius = 400.0

[node name="Shooter" type="Node2D"]
script = ExtResource("1_iyj4l")
detector_color = Color(0, 0, 1, 0.490196)
detect_radius = 400

[node name="Gun" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_m3rfr")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.887915
offset = Vector2(11, -2)

[node name="Muzzle" type="Marker2D" parent="Gun"]
position = Vector2(80, 0)

[node name="MuzzleFlash" type="AnimatedSprite2D" parent="."]
position = Vector2(80, 0)
sprite_frames = SubResource("SpriteFrames_0m3mx")
animation = &"idle"
autoplay = "idle"

[node name="Detector" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
modulate = Color(1, 1, 1, 0.247059)
shape = SubResource("CircleShape2D_juiex")

[node name="LookAhead" type="RayCast2D" parent="."]
target_position = Vector2(450, 0)

[node name="FireRateTimer" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="Gun" to="." method="_on_gun_animation_finished"]
[connection signal="timeout" from="FireRateTimer" to="." method="_on_fire_rate_timer_timeout"]
